styles/styles.scss
/* ... */
a {
  color: $cornflowerblue;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;

  &:hover {
    text-decoration: underline;
  }
}

p {
  max-width: 826px;
  margin: 1.875em auto !important;
  font-size: 1.0625em;
  font-weight: 300;
  line-height: 1.5625em;
  text-align: left;

  &.center {
    text-align: center;
  }

  @media all and (max-width: 768px) {
    padding: 0 .625em;
    text-align: center;
  }
}

strong {
  padding: 2px 5px;
  border-radius: 3px;
  background-color: #eaeaea;
  color: #b9316f;
  font-weight: 600;
}

.show-example-btn {
  $btn-blue: #7367f0;
  $btn-gray: #d0d0d0;

  padding: .9em 2.1875em;
  border: 0;
  border-radius: .1875em;
  background-color: $btn-blue;
  box-shadow: none;
  color: $white;
  font-size: 1.125em;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;

  &:hover {
    background-color: darken($btn-blue, 3%);
  }

  &:focus {
    outline: none;
    box-shadow: 0 0 0 3px rgba(115, 103, 240, .5);
  }

  &::-moz-focus-inner {
    border: 0;
  }

  &:active {
    background-color: darken($btn-blue, 10%);
  }
}

.center-container {
  max-width: 725px;
  margin: 4.375em auto;
}

.code-label {
  margin: 1em 1.2em .2em;
}

pre {
  position: relative;
  max-width: 95%;
  margin: 0 auto;
  background: $shark;
  color: lighten($black, 97);
  font-size: 1.2em !important;
  line-height: 1.2;
  text-align: left;

  code {
    display: block;
    padding: .5em;
    overflow: hidden !important;
    border-radius: .3125em;
    font-family: 'Source Code Pro', monospace;
    font-size: .8em;
  }

  .comment {
    color: $regentgray;

    a {
      color: $regentgray;
      text-decoration: underline;
    }
  }

  &.code-sample {
    &:hover {
      &::after {
        top: -2em;
        opacity: 1;
      }
    }

    &::after {
      content: 'Try it on CodePen';
      display: flex;
      position: absolute;
      top: 0;
      right: 0;
      align-items: center;
      width: 13em;
      height: 2em;
      padding-left: .8em;
      transition: top .2s ease-in-out, opacity .2s ease-in-out;
      opacity: 0;
      background: $black url('/images/codepen.svg') 11.6em .2em no-repeat;
      background-size: 1.6em;
      font-size: .8em;
      cursor: pointer;

      @media all and (max-width: 768px) {
        display: none;
      }
    }
  }
}

kbd {
  padding: 0 .125em;
  border: 1px solid $regentgray;
  border-radius: .1875em;
}

.showcase {
  display: inline-block;
  position: relative;
  width: 21em;
  max-width: 94%;
  margin-top: .9em;
  padding: 1em;
  background-color: $porcelain;
  vertical-align: top;

  &.normal {
    button {
      margin: 40px;
    }
  }

  @media all and (max-width: 768px) {
    padding: 0 .625em .625em;

    &.normal,
    img {
      display: none;
    }
  }

  @media all and (max-width: 360px) {
    width: 90%;
  }

  h4 {
    margin: 0 auto;
    color: lighten($black, 70);
    font-size: 1em;
    font-weight: 800;
    line-height: 1.375em;
  }

  &.sweet {
    padding-top: 14px;

    button {
      margin: 8px auto 25px;
    }
  }

  button {
    margin: 2em auto;
  }

  .vs-icon {
    @include retina-background('vs_icon');

    position: absolute;
    z-index: 2;
    top: 3.75em;
    right: -2.125em;
    width: 4.3125em;
    height: 4.3125em;

    @media all and (max-width: 768px) {
      top: auto;
      right: auto;
      bottom: -2.1875em;
      left: 50%;
      margin: .3125em auto;
      margin-left: -2.1875em;
    }
  }
}

.examples {
  max-width: 900px;
  margin: 0 auto;
  padding-left: 0;
  list-style-type: none;
  text-align: left;

  @media all and (max-width: 768px) {
    width: auto;
  }

  li {
    padding-left: 0;
    text-align: center;
  }

  .ui,
  pre {
    display: inline-block;
    vertical-align: top;

    @media all and (max-width: 768px) {
      display: block;
      font-size: .9em;
    }
  }

  .ui {
    width: 300px;
    margin: 0 auto;
    text-align: center;

    p {
      margin-bottom: 0;
      padding: 0 2em;
      text-align: center;
    }
  }

  pre {
    width: 528px;
    margin-top: 2.5em;

    @media all and (max-width: 768px) {
      margin-top: 1em !important;
      margin-bottom: 3.75em;
    }
  }
}

#multiple-inputs-example,
#mixin {
  pre {
    width: 550px;
  }
}

ol {
  max-width: 725px;
  margin: 4.375em auto;
  padding-left: 0;
  list-style-position: inside;

  li {
    color: $chateaugray;

    p {
      margin-bottom: .625em;
    }
  }
}

table {
  width: 725px;
  margin: .625em auto;
  border-collapse: collapse;
  text-align: left;

  @media all and (max-width: 768px) {
    width: auto;
    margin: .625em auto;
  }

  th {
    position: relative;
    padding: .625em 1.25em;
    background-color: $white;
    color: $dovegray;
    font-weight: 400;
    white-space: nowrap;

    @media all and (max-width: 360px) {
      padding: .625em .25em;
    }
  }

  td {
    padding: .625em 1.25em;
    vertical-align: top;

    .deprecated {
      color: #600;
    }

    @media all and (max-width: 360px) {
      padding: .625em .25em;

      b {
        font-size: .8125em;
      }
    }
  }
}

#api {
  tr {
    td:first-child {
      position: relative;
    }
  }

  pre {
    max-width: 100%;
    margin: 0;
  }
}

.hover-anchor {
  display: none;
  position: absolute;
  top: 10px;
  left: 0;
}

tr:hover {
  .hover-anchor {
    display: block !important;
  }
}

.popup-icons,
.input-types {
  strong {
    color: #555;
  }

  @media all and (max-width: 768px) {
    th,
    td {
      &:nth-child(2) {
        display: none;
      }
    }
  }
}

.input-types {
  td {
    width: 33%;
    text-align: center;
    vertical-align: middle;
  }

  pre {
    width: 510px;
  }
}

.dismiss-reasons {
  @media all and (max-width: 768px) {
    tr {
      display: flex;
      flex-direction: column;
      padding: .625em 1.25em;
    }

    th {
      display: none;
    }

    td {
      padding: 0;

      &:nth-child(3) {
        display: none;
      }
    }
  }
}

.hidden {
  opacity: 0;
}
/* ... */

